<resources>
    <string name="app_name">ProjectToDelete</string>
    <string name="action_settings">Settings</string>

    <string name="textView_title">Title</string>
    <string name="textView_author">Author</string>
    <string name="textView_create_time">CreateTime</string>
    <string name="textView_tag">Tag</string>
    <string name="textView_content">Content</string>

    <string name="button_get_data">Get_data_and_publish</string>

    <string name="textView_reload">Reload</string>




    <string-array name="tag_list">
        <item>Lovely</item>
        <item>Talk</item>
        <item>Lie</item>
        <item>WorkLife</item>
    </string-array>

    <string name="spinner_tag">Please select TAG</string>



</resources>
